fix: Correciones en el modulo de Especialidades
